Migráció Spring Security 6-ra és Spring Boot 3-ra